Swagger docs updated
